# ath_dsp

./: .gitignore  CMakeLists.txt  README.md
control/: Events.h
dsp/: Context.cpp  Context.h  FIR.h  Filter.h
dsp/cv/: LinearSmoother.h
math/: Math.h  Random.cpp  Random.h  RandomCDF.py  Simd.h  Special.h  sin.py
python/: sin.py
tests/: .gitignore  CMakeLists.txt  main.cpp
